[tool.poetry]
name = "prw"
version = "0.1.0"
description = "Files & scripts for PRONOM Research Week 2020"
authors = ["Nina Jensen <jnik@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.50.1"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
colorcet = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.782"
reorder_python_imports = "^2.3.5"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

